$Id: NEWS,v 1.719 2006-02-08 01:25:46 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 2703 - Disk quota exceeded for small files not being triggered.
- Bug 2706 - utmp/wtmp logging on NetBSD needs some tweaks.
- Bug 2708 - configure cannot detect some headers.  The configure
  script now adds the directories mentioned via the --with-includes
  and --with-libraries options to the CPPFLAGS and LDFLAGS environment
  variables.
- Bug 2711 - Controls socket detection broken.
- Bug 2712 - DisplayFirstChdir directive does not work.
- Bug 2705 - proftpd fails to log anything to syslog after dropping privs
  on Solaris.  This happens because of the default permissions on /dev/log
  on Solaris.
- Portability tweaks for Mac OS 10.4.
- Bug 2729 - Authorative PAM authentication doesn't work.  The mod_auth_pam
  module still had code for supporting the deprecated AuthPAMAuthoritative
  directive.  As per Bug #2440, however, the AuthOrder directive should
  be used for configuring authoritativeness.  This fixes mod_auth_pam
  to behave properly using the new AuthOrder setting.
- Bug 2709 - mod_sql improperly strips spaces from names, allowing for
  confusing authentication.
- Bug 2735 - Allow REST 0 in ASCII mode.
- Bug 2746 - Data transfer function does not return error condition in case of
  read errors.

1.3.0rc3 - Released 31-Oct-2005
--------------------------------
- Bug 2660 - Add mod_facl in rpm spec file.
- Bug 2662 - OpenSolaris/Solaris 11 has TCP_CORK but not SOL_TCP.
- Bug 2667 - mod_tls handles SIGHUP badly.
- Bug 2668 - mod_ctrls fails to open socket during SIGHUP.