@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.719 2006-02-08 01:25:46 castaglia Exp $
+$Id: NEWS,v 1.720 2006-02-21 06:55:38 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -33,6 +33,7 @@ CVS
 - Bug 2735 - Allow REST 0 in ASCII mode.
 - Bug 2746 - Data transfer function does not return error condition in case of
   read errors.
+- Bug 2752 - FEAT reply not RFC 2389 compliant.
 
 1.3.0rc3 - Released 31-Oct-2005
 --------------------------------
